# reddit-mcp

./: .gitignore  README.md  pyproject.toml  server.py
tests/: conftest.py  test_server.py
tests/fixtures/: post_with_comments.json  search_results.json  subreddit_about.json  subreddit_listing.json  user_overview.json
